@@ -104,7 +104,7 @@
          ("2.5.2.28.1" . "28.1") ("2.5.3.28.2" . "28.2") ("2.5.4" . "28.3")
          ("2.6.0.29.1" . "29.1") ("2.6.2.29.2" . "29.2") ("2.6.3-pre" . "29.3")
 	 ("2.6.3" . "29.4")
-	 ("2.7.1" . "30.1")))
+	 ("2.7.1.30.1" . "30.1")))
 
 (add-hook 'tramp-unload-hook
 	  (lambda ()
